# Crab-shield

./: README.md
ebpf_user/: Cargo.toml
ebpf_user/ml/: rf_iris.onnx  scaler.json
ebpf_user/src/: main.rs
ebpf_user/src/alert/: handler_alert.rs  mod.rs
ebpf_user/src/config_parser/: parser.rs
ebpf_user/src/entropy/: entropy.rs
ebpf_user/src/features/: features.rs  mod.rs  pattren.rs
ebpf_user/src/machine_learning_attrb/: centrial.rs  event_loop.rs  mod.rs
ebpf_user/src/machine_learning_module/: machine_learning_module.rs  mod.rs
ebpf_user/src/manage/: ebpf_helper.rs  mod.rs  reader_ring_buf.rs  tmp.rs
ebpf_user/src/singature/: sig.rs
ebpf_user/src/utils/: mod.rs  ring_buffer.rs  scaler.rs
ml_learn/: .gitignore  main.py  pyproject.toml  rf_iris.onnx  scaler.json
ml_learn/.ipynb_checkpoints/: Main-checkpoint.ipynb
src_ebpf/: .gitignore  aheader.h  compile.sh  loader  loader.c  main.bpf.c
