[package]
name = "crab_shield"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aya = { git = "https://github.com/altugbozkurt07/aya.git", branch = "ksysm", package = "aya" }
aya-log = "0.2.1"
clap = {version = "4.5.54", features = ["derive"]}
env_logger = "0.11.8"
log = "0.4.29"
md5 = "0.8.0"
mockito = "1.7.1"
ndarray = "0.17.1"
nix = "0.31.1"
ort = "2.0.0-rc.11"
reqwest = {version = "0.13.1", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_toml = "0.0.1"
sha256 = "1.6.0"
sysinfo = "0.37.2"
tokio = {version =  "1.48.0",features = ["full"]}
toml = "0.9.11"
uuid = {version = "1.19.0", features = ["v4"]}
