[project]
name = "sklearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imblearn>=0.0",
    "jupyterlab>=4.5.1",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "skl2onnx>=1.19.1",
]
